@@ -8,7 +8,7 @@
          directories. It provides Java to XML binding, Java to SQL/LDAP persistence, and then
          some more.</p>
 
-      <p><b>May 24, 2000</b> Version $VERSION$ is now <a href="download.xml">available for download</a>.</p>
+      <p><b>June 1, 2000</b> Version $VERSION$ is now <a href="download.xml">available for download</a>.</p>
 
       <p><a href="ora-mar-2k/castor.htm">The presentation we did at the Java O'Reilly Conference
          is now available online</a>. For those who could not attend we promise to make another
