@@ -60,4 +60,11 @@ org.exolab.castor.jdo.keyGeneratorFactories=\
   org.exolab.castor.jdo.drivers.SequenceKeyGeneratorFactory
 
 
-
+# Collection handlers for the source code generator
+#
+org.exolab.castor.builder.type.j2=\
+  org.exolab.castor.builder.FieldInfoFactoryJ2
+org.exolab.castor.builder.type.j1=\
+  org.exolab.castor.builder.FieldInfoFactory
+org.exolab.castor.builder.type.odmg=\
+  org.exolab.castor.builder.FieldInfoFactoryODMG30
